Made the X in "red Xs" red

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>About SaludSecure</h3>
             <p>SaludSecure was born out of a desire to lend a helping hand in simplifying password creation, amidst the increasingly complex requirements imposed by a certain school-adjacent organization. As soon as the requirements were unveiled, the author of this site knew they might be a bit of a stretch for his non-IT peers to master.</p>
             <p>The requirement that new passwords must not be "common" left many feeling anxious, unsure about what to do after their otherwise good-enough password was rejected for being too "common", and asking for a simpler solution.</p>
-            <p>SaludSecure saves the day by generating passwords that are <strong>guaranteed</strong> to not result in any red Xs, while still being straightforward enough to remember. And, with a bit of luck, even the most digitally-challenged individuals can use them with ease.</p>
+            <p>SaludSecure saves the day by generating passwords that are <strong>guaranteed</strong> to not result in any red <span style="color: red;">X</span>s, while still being straightforward enough to remember. And, with a bit of luck, even the most digitally-challenged individuals can use them with ease.</p>
         </div>
     </div>
 
